--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,18 +31,18 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     //compile 'com.google.firebase:firebase-auth:10.0.1'
-
     compile 'com.google.firebase:firebase-auth:11.0.2'
     compile 'com.google.android.gms:play-services-auth:11.0.2'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.firebase:firebase-database:11.0.2'
     testCompile 'junit:junit:4.12'
+    compile files('C:/Users/vivek/AndroidStudioProjects/civiq-app/libs/jsoup-1.10.3.jar')
 }
 
 //apply plugin: 'com.google.gms.google-services'
