--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,8 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.firebase:firebase-database:11.0.2'
     testCompile 'junit:junit:4.12'
-    compile files('C:/Users/vivek/AndroidStudioProjects/civiq-app/libs/jsoup-1.10.3.jar')
+    //compile files('C:/Users/vivek/AndroidStudioProjects/civiq-app/libs/jsoup-1.10.3.jar')
+    compile files('C:/Users/keya/AndroidStudioProjects/CiviqApp/libs/jsoup-1.10.3.jar')
 }
 
 //apply plugin: 'com.google.gms.google-services'
